--- a/classComposer/public/css/main.css
+++ b/classComposer/public/css/main.css
@@ -1,2 +1,73 @@
 /*Bootstrap UI Dependencies*/
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+/* Angular Toolbar https://material.angularjs.org/latest/demo/toolbar*/
+md-toolbar md-icon.md-default-theme {
+  color: white; }
+/* Angular Toolbar https://material.angularjs.org/latest/getting-started*/
+.md-toolbar-tools h1 {
+  font-size: inherit;
+  font-weight: inherit;
+  margin: inherit;
+}
+
+/*from http://codepen.io/kyleledbetter/pen/gbQOaV/*/
+$gray: #eee;
+
+md-content.md-default-theme {
+  background-color: $gray;
+}
+md-card {
+  background-color: #fff;
+  h2:first-of-type {
+    margin-top: 0;
+  }
+}
+md-toolbar {
+  .md-button.md-default-theme {
+    border-radius: 99%; // round toolbar buttons
+  }
+}
+h2 {
+  font-weight: 400;
+}
+.md-toolbar-tools-bottom {
+  font-size: small;
+  & :last-child {
+    opacity: 0.8;
+  }
+}
+md-toolbar:not(.md-hue-1),
+.md-fab {
+  fill: #fff;
+}
+md-sidenav {
+  fill: #737373;
+  ng-md-icon {
+    position: relative;
+    top: 5px; // adjust for svg viewbox
+  }
+}
+.user-avatar {
+  border-radius: 99%;
+}
+
+
+/**/
+#popupContainer {
+  position: relative; }
+.debt-be-gone {
+  font-weight: bold;
+  color: blue;
+  text-decoration: underline; }
+.footer {
+  width: 100%;
+  text-align: center;
+  margin-left: 20px; }
+.footer, .footer > code {
+  font-size: 0.8em;
+  margin-top: 50px; }
+
+.select {
+  margin : 0px;
+}
