--- a/classComposer/public/css/main.css
+++ b/classComposer/public/css/main.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+  position: relative;
+}
+
 /*Bootstrap UI Dependencies*/
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
@@ -88,3 +93,314 @@ margin-top:0px;
   margin-right: 16px;
 }
 
+
+
+/*******************************************************/
+/************** Below is from Midterm *******************/
+/*******************************************************/
+body {
+  font-family: 'Montserrat', sans-serif;
+  position: relative;
+}
+
+
+/*************//*************//*************/
+    /*Extracted from simple.css*/
+/*************//*************//*************/
+
+/**
+ * For the correct positioning of the placeholder element, the dnd-list and
+ * it's children must have position: relative
+ */
+  ul[dnd-list],
+  ul[dnd-list] > li {
+  position: relative;
+}
+
+/**
+ * The dnd-list should always have a min-height,
+ * otherwise you can't drop to it once it's empty
+ */
+  ul[dnd-list] {
+    min-height: 42px;
+    padding-left: 0px;
+}
+
+/**
+ * The dndDraggingSource class will be applied to
+ * the source element of a drag operation. It makes
+ * sense to hide it to give the user the feeling
+ * that he's actually moving it.
+ */
+  ul[dnd-list] .dndDraggingSource {
+    display: none;
+}
+
+/**
+ * An element with .dndPlaceholder class will be
+ * added to the dnd-list while the user is dragging
+ * over it.
+ */
+  ul[dnd-list] .dndPlaceholder {
+    display: block;
+    background-color: #ddd;
+    min-height: 42px;
+}
+
+/**
+ * The dnd-lists's child elements currently MUST have
+ * position: relative. Otherwise we can not determine
+ * whether the mouse pointer is in the upper or lower
+ * half of the element we are dragging over. In other
+ * browsers we can use event.offsetY for this.
+ */
+ 
+ ul[dnd-list] li {
+    background-color: #fff;
+    /*border: 1px solid #ddd;*/
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    display: block;
+    /*padding: 10px 15px;*/
+    /*margin-bottom: -1px;*/
+}
+
+
+/**
+ * Show selected elements in green
+ */
+
+/*  ul[dnd-list] li.selected {
+    background-color: #dff0d8;
+    color: #3c763d;
+}*/
+
+
+
+/*************//*************//*************/
+  /*End of Extracted from simple.css*/
+/*************//*************//*************/
+
+
+
+
+
+
+/*Class Room*/
+
+.gradeLevelHeader {
+  background-color: #607D8B; /*Blue Grey 500*/
+  padding: 5px;
+  margin : 5px;
+}
+
+.gradeLevelTitle {
+  font-size: 3rem;  
+  font-weight: bold;
+  padding-top: 15px;
+  padding-right: 15px;
+  color: white;
+}
+
+.gradeLevelclassRoomsPreview {
+  background-color: #78909C; /*Blue Grey 400*/
+  margin: 5px;
+  padding: 5px;
+  border: solid 3px #F44336; /*Red 500*/
+}
+
+.gradeLevelclassRoomsPreview:hover {
+  background-color: #CFD8DC; /*Blue Grey 100*/
+}
+
+.gradeLevelclassRoomsPreviewExanded {
+  background-color: #CFD8DC; /*Blue Grey 100*/
+  border: solid 3px #009688; /*Teal 500*/
+}
+
+.gradeLevelclassRoomsPreviewExanded:hover {
+  background-color: #78909C; /*Blue Grey 400*/
+}
+
+
+
+.gradeLevelBody {
+  margin: 5px;
+  background-color: #CFD8DC; /*Blue Grey 100*/
+}
+
+/*************/
+
+/* classRoom */
+.classRoom {
+  padding: 5px;
+  /*margin : 5px;   //breaks the flexx33*/
+  border: solid 5px #607D8B; /*Blue Grey 500*/
+}
+
+.classRoomHeader {
+  /*border: solid 3px #009688;*/
+}
+
+.classRoomTeacher {
+  text-align: center;
+  line-height: 50px;
+  vertical-align: middle;
+  padding-top: 20px;
+  /*border: solid 3px #009688;*/
+}
+
+.classRoomTeacher  h2 {
+  vertical-align: middle;
+  /*border: solid 3px #009688;*/
+}
+
+.classRoomDashboard {
+  padding: 10px;
+  /*border: solid 3px #009688;*/
+}
+
+.classRoomUpper {
+  /*border: solid 3px #009688;*/
+}
+
+.classRoomAcademicAvg, .classRoomLifeSkillsAvg, .classRoomLastTeacher, .classRoomIdentified {
+  text-align: center;
+  height: 50px;
+  background-color: #FFFFFF; /* white */
+  margin: 2px;
+}
+
+.header {
+  text-align: center;
+  border-bottom: solid 3px #607D8B; /*Blue Grey 500*/
+  margin: auto;
+}
+
+
+.classRoomLower {
+  /*border: solid 3px #009688;*/
+}
+
+.classRoomBody {
+  /*max-height: 75vh;*/
+  /*overflow: scroll;*/
+
+  /*border: solid 3px #009688;*/
+}
+
+/*************/
+
+
+/*Student List by Gender*/
+
+.genderList {
+  padding : 5px;
+  /*height: 5rem;*/
+  /*margin: 3px;*/
+}
+
+.Boys {
+  
+  background-color: #B3E5FC; /*Light Blue 100*/
+
+}
+.Girls {
+  background-color: #F8BBD0; /*Pink 100*/
+}
+
+.Red {
+  background-color: #E57373; /*Red 300*/
+}
+
+.Yellow {
+  background-color: #FFF176; /*Yellow 300*/
+}
+.orange { 
+  background-color: #FFB74D; /*Orange 300*/
+}
+.Green {
+  background-color: #81C784; /*Green 300*/
+}
+
+.Purple {
+  background-color: #BA68C8; /*Purple 300*/
+}
+
+.genderListHeader {
+  /*border: solid 1px;*/
+  background-color: #FFFFFF;; /*Blue Grey 500*/
+  text-align: center;
+  height: 3rem;
+  font-weight: bold;
+  padding-top: 0.5rem;
+
+}
+
+/*************/
+
+/*Student*/
+
+.studentCard {
+}
+
+.MALE, .FEMALE {
+  border: solid 2px;
+  padding: 10px 15px;
+}
+
+.MALE {
+  border-color: #B3E5FC; /*Light Blue 100*/
+}
+
+.FEMALE {
+  border-color: #F8BBD0; /*Pink 100*/
+}
+
+.studentAcademicAvg { 
+}
+
+.studentName {
+
+}
+
+.studentLastYearTeacher {
+
+}
+
+.studentLifeSkillsAvg {
+
+}
+
+.studentLabels {
+
+}
+
+.studentConstraints {
+
+}
+
+/*************/
+
+/*Student Profile*/
+
+/*.studentProfileShadow {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0 , 0, 0, 0.6);
+  z-index: 10000;
+}
+.studentProfile {
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  top: 100px;
+  padding: 50px;
+  
+  background-color: white;
+  z-index: 10001;
+
+}*/
+
+/*************/
