--- a/classComposer/public/css/main.css
+++ b/classComposer/public/css/main.css
@@ -189,7 +189,7 @@ body {
 /*Class Room*/
 
 .gradeLevelHeader {
-  background-color: #607D8B; /*Blue Grey 500*/
+  /*background-color: #607D8B;*/ /*Blue Grey 500*/
   padding: 5px;
   margin : 5px;
 }
@@ -226,7 +226,7 @@ body {
 
 .gradeLevelBody {
   margin: 5px;
-  background-color: #CFD8DC; /*Blue Grey 100*/
+  /*background-color: #CFD8DC;*/ /*Blue Grey 100*/
 }
 
 /*************/
@@ -235,7 +235,7 @@ body {
 .classRoom {
   padding: 5px;
   /*margin : 5px;   //breaks the flexx33*/
-  border: solid 5px #607D8B; /*Blue Grey 500*/
+  /*border: solid 5px #607D8B;*/ /*Blue Grey 500*/
 }
 
 .classRoomHeader {
@@ -329,9 +329,9 @@ body {
 
 .genderListHeader {
   /*border: solid 1px;*/
-  background-color: #FFFFFF;; /*Blue Grey 500*/
+  background-color: #FFFFFF; /*Blue Grey 500*/
   text-align: center;
-  height: 3rem;
+  height: 2rem;
   font-weight: bold;
   padding-top: 0.5rem;
 
@@ -379,6 +379,29 @@ body {
 .studentConstraints {
 
 }
+
+.studentName.ng-binding.flex-40 {
+    font-size: 12px;
+}
+.studentLastYearTeacher.flex-10 {
+    font-size: 12px;
+}
+ i.material-icons {
+    font-size: 15px;
+    padding-left: 5px;
+}
+.studentLifeSkillsAvg.ng-binding.flex-5 {
+    font-size: 12px;
+} 
+
+.logo {
+    width: auto;
+    height: 100px;
+}
+
+
+
+
 
 /*************/
 
